--- a/trans_documentation/lyInitiale.dita
+++ b/trans_documentation/lyInitiale.dita
@@ -43,7 +43,7 @@ href="../pagexml_documentation/pagecontent_xsd_Simple_Type_pc_TextTypeSimpleType
         &lt;/ReadingOrder>
         &lt;Relations>
              &lt;Relation id="rel1" type="join">
-                &lt;SourceRegionRef regionRef="regionRef="region_1476719208569_209"/"/>
+                &lt;SourceRegionRef regionRef="region_1476719208569_209"/>
                 &lt;TargetRegionRef regionRef="TextRegion_1476719753697_244"/>
             &lt;/Relation>
         &lt;/Relations>
