--- a/de/trans/impressum.dita
+++ b/de/trans/impressum.dita
@@ -10,10 +10,12 @@
 rechtliche Hinweise zur Internetpräsenz des Projekts OCR-D.</p></section>
 <section>
  <title>Herausgeber</title>
-      <p>Die Transkriptionsrichtlinien zur Erstellung von Transkriptionen für Ground Truth basieren u. a.
-      auf der Dokumentation des DTA-Basisformates. Die Richtlinien werden im Rahmen des Projekts <xref
-      href="http://www.ocr-d.de" format="html" scope="external">OCR-D</xref> erarbeitet und
-      herausgegeben.</p>
+  
+      <p><image href="../resources/ocrd.png" scale="50" id="image_dlz_b1h_dqb"/>Die
+        Transkriptionsrichtlinien zur Erstellung von Transkriptionen für Ground Truth basieren u. a.
+        auf der Dokumentation des DTA-Basisformates. Die Richtlinien werden im Rahmen des Projekts
+          <xref href="http://www.ocr-d.de" format="html" scope="external">OCR-D</xref> erarbeitet
+        und herausgegeben.</p>
 <p>Anbieter dieser Internetpräsenz ist im Rechtssinne die Herzog August Bibliothek Wolfenbüttel.</p>
 <p>Herzog August Bibliothek</p>
 <p>Lessingplatz 1</p>
