--- a/en/trans/level_2_und_3_2.dita
+++ b/en/trans/level_2_und_3_2.dita
@@ -21,13 +21,13 @@
                                 <alt>Herr (with round r)</alt>
                             </image>
                         </entry>
-<entry><codeph>Her&amp;#xA75B;</codeph></entry>
+<entry>Her&#xA75B;</entry>
 </row>
 <row>
 <entry><image href="images/etc.jpg" id="image_m2t_dwp_mbb">
                                 <alt>etc. (with round r)</alt>
                             </image></entry>
-<entry><codeph>&amp;#xA75B;c.</codeph></entry>
+<entry>&#xA75B;c.</entry>
 </row>
 </tbody>
 </tgroup>
