--- a/de/trans/tr_nasal_level_3.dita
+++ b/de/trans/tr_nasal_level_3.dita
@@ -20,11 +20,11 @@
 <tbody>
 <row>
 <entry><image href="images/frommen.jpg"/></entry>
-<entry><codeph>fro&amp;#xF519;en</codeph></entry>
+<entry>fro&#xF519;en</entry>
 </row>
                     <row>
                         <entry><image href="images/und_macht.jpg" id="image_pxn_fcb_pbb"/></entry>
-                        <entry><codeph>U&amp;#x00F1; macht</codeph></entry>
+                        <entry>U&#x00F1; macht</entry>
                     </row>
 </tbody>
 </tgroup>
