--- a/en/trans/trLigaturen2.dita
+++ b/en/trans/trLigaturen2.dita
@@ -4,233 +4,207 @@
   <title>Ligatures</title>
   <body>
     <p>
-<table id="table_h53_3gm_gz">
-<tgroup cols="5">
-<colspec colnum="1" colname="col1"/>
-<colspec colnum="2" colname="col2"/>
-<colspec colname="newCol3" colnum="3"/>
-<colspec colname="newCol4" colnum="4"/>
-<colspec colname="newCol5" colnum="5"/>
-<tbody>
-<row>
-<entry dir="ltr"/>
-<entry dir="ltr"/>
-<entry><b>Level 1</b></entry>
-<entry><b>Level 2</b></entry>
-<entry><b>Level 3</b></entry>
-</row>
-<row>
-<entry><image
-href="images/font_0114.png"
-height="31" width="29" id="image_i53_3gm_gz"/></entry>
-<entry>&amp;#x00C6;</entry>
-<entry>&amp;#x00C6;</entry>
-<entry>&amp;#x00C6;</entry>
-<entry>&amp;#x00C6;</entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0010.png"
-height="27" width="20" id="image_j53_3gm_gz"/><image
-href="images/font_0035.png"
-height="25" width="20" id="image_k53_3gm_gz"/><image
-href="images/font_0064.png"
-height="33" width="28" id="image_l53_3gm_gz"/><image
-href="images/font_0083.png"
-height="29" width="27" id="image_m53_3gm_gz"/></entry>
-<entry dir="ltr">&amp;#x00E6;</entry>
-<entry>&amp;#x00E6;</entry>
-<entry>&amp;#x00E6;</entry>
-<entry>&amp;#x00E6;</entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0129.png"
-height="23" width="20" id="image_n53_3gm_gz"/><image
-href="images/font_0019.png"
-height="26" width="24" id="image_o53_3gm_gz"/><image
-href="images/font_0099.png"
-height="27" width="24" id="image_p53_3gm_gz"/></entry>
-<entry dir="ltr">ct</entry>
-<entry>ct</entry>
-<entry>ct</entry>
-<entry>&amp;#xEEC5;</entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0033.png"
-height="22" width="30" id="image_q53_3gm_gz"/></entry>
-<entry dir="ltr">&amp;#x0152;</entry>
-<entry>&amp;#x0152;</entry>
-<entry>&amp;#x0152;</entry>
-<entry>&amp;#x0152;</entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0117.png"
-height="20" width="22" id="image_r53_3gm_gz"/><image
-href="images/font_0121.png"
-height="27" width="24" id="image_s53_3gm_gz"/></entry>
-<entry dir="ltr">&amp;#x0153;</entry>
-<entry>&amp;#x0153;</entry>
-<entry>&amp;#x0153;</entry>
-<entry>&amp;#x0153;</entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0004.png"
-height="40" width="20" id="image_u53_3gm_gz"/><image
-href="images/font_0008.png"
-height="43" width="20" id="image_v53_3gm_gz"/><image
-href="images/font_0088.png"
-height="39" width="29" id="image_w53_3gm_gz"/> </entry>
-<entry dir="ltr">ß</entry>
-<entry>ß</entry>
-<entry>ß</entry>
-<entry>ß</entry>
-</row>
-<row>
-<entry><image
-href="images/font_0098.png"
-height="42" width="20" id="image_t53_3gm_gz"/></entry>
-<entry>&amp;#x017F;z (Note: This is not a ligature)</entry>
-<entry>&amp;#x017F;z </entry>
-<entry>&amp;#x017F;z </entry>
-<entry>&amp;#x017F;z </entry>
-</row>
-<row>
-<entry><image
-href="images/font_0135.png"
-height="41" width="29" id="image_x53_3gm_gz"/></entry>
-<entry>&amp;#x017F;s <p>
-<note>(Note: This is not a ligature)</note>
-</p></entry>
-<entry>&amp;#x017F;s </entry>
-<entry>&amp;#x017F;s </entry>
-<entry>&amp;#x017F;s </entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0115.png"
-height="27" width="20" id="image_y53_3gm_gz"/><image
-href="images/font_0065.png"
-height="31" width="20" id="image_z53_3gm_gz"/></entry>
-<entry dir="ltr">&amp;#x017F;p</entry>
-<entry>&amp;#x017F;p</entry>
-<entry>&amp;#x017F;p</entry>
-<entry/>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0093.png"
-height="29" width="20" id="image_av3_3gm_gz"/><image
-href="images/font_0069.png"
-height="34" width="25" id="image_bv3_3gm_gz"/></entry>
-<entry dir="ltr">st</entry>
-<entry>st</entry>
-<entry>&amp;#xFB06;</entry>
-<entry>&amp;#xFB06;</entry>
-</row>
-<row>
-<entry><image
-href="images/font_0076.png"
-height="36" width="19" id="image_dv3_3gm_gz"/><image
-href="images/font_0085.png"
-height="35" width="22" id="image_cv3_3gm_gz"/></entry>
-<entry>&amp;#x017F;t</entry>
-<entry>&amp;#x017F;t</entry>
-<entry>&amp;#x017F;t</entry>
-<entry>&amp;#xFB05;</entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0037.png"
-height="43" width="20" id="image_ev3_3gm_gz"/><image
-href="images/font_0075.png"
-height="42" width="21" id="image_fv3_3gm_gz"/><image
-href="images/font_0086.png"
-height="43" width="23" id="image_gv3_3gm_gz"/></entry>
-<entry dir="ltr">tz</entry>
-<entry>tz</entry>
-<entry>tz</entry>
-<entry>&amp;#xEEDC;</entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0080.png"
-height="24" width="29" id="image_hv3_3gm_gz"/></entry>
-<entry dir="ltr">jtzo</entry>
-<entry>jtzo</entry>
-<entry>jtzo</entry>
-<entry>j&amp;#xEEDC;o</entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0028.png"
-height="24" width="35" id="image_iv3_3gm_gz"/></entry>
-<entry dir="ltr">&amp;#xA75B;tc.</entry>
-<entry>&amp;#xA75B;tc.</entry>
-<entry>&amp;#xA75B;tc.</entry>
-<entry>&amp;#xA75B;tc.</entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0062.png"
-height="23" width="25" id="image_jv3_3gm_gz"/><image
-href="images/font_0007.png"
-height="24" width="26" id="image_kv3_3gm_gz"/></entry>
-<entry dir="ltr">&amp;#xA75B;c.</entry>
-<entry>&amp;#xA75B;c.</entry>
-<entry>&amp;#xA75B;c.</entry>
-<entry>&amp;#xA75B;c.</entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0123.png"
-height="45" width="20" id="image_qvr_5fm_gz"/></entry>
-<entry dir="ltr">ij</entry>
-<entry>ij</entry>
-<entry>&amp;#x0133;</entry>
-<entry>&amp;#x0133;</entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0119.png"
-height="20" width="39" id="image_lv3_3gm_gz"/></entry>
-<entry dir="ltr">&amp;c.</entry>
-<entry>&amp;#x0026;c</entry>
-<entry>&amp;#x0026;c</entry>
-<entry>&amp;#x0026;c</entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0047.png"
-height="23" width="35" id="image_mv3_3gm_gz"/></entry>
-<entry dir="ltr">&amp;&amp;#x00E7;</entry>
-<entry>&amp;#x0026;&amp;#x00E7;</entry>
-<entry>&amp;#x0026;&amp;#x00E7;</entry>
-<entry>&amp;#x0026;&amp;#x00E7;</entry>
-</row>
-<row>
-<entry dir="ltr"><image
-href="images/font_0100.png"
-height="25" width="22" id="image_nv3_3gm_gz"/><image
-href="images/font_0072.png"
-height="24" width="22" id="image_ov3_3gm_gz"/><image
-href="images/font_0118.png"
-height="21" width="22" id="image_pv3_3gm_gz"/><image
-href="images/font_0051.png"
-height="29" width="28" id="image_qv3_3gm_gz"/><image
-href="images/font_0074.png"
-height="27" width="27" id="image_rv3_3gm_gz"/></entry>
-<entry dir="ltr">&amp;</entry>
-<entry>&amp;#x0026;</entry>
-<entry>&amp;#x0026;</entry>
-<entry>&amp;#x0026;</entry>
-</row>
-</tbody>
-</tgroup>
-</table>
-</p>
-  </body>
+      <table id="table_h53_3gm_gz">
+        <tgroup cols="5">
+          <colspec colnum="1" colname="col1"/>
+          <colspec colname="newCol3" colnum="2"/>
+          <colspec colname="newCol4" colnum="3"/>
+          <colspec colname="newCol5" colnum="4"/>
+          <colspec colname="newCol6" colnum="5"/>
+          <thead>
+            <row>
+              <entry dir="ltr"/>
+              <entry><b>Level 1</b></entry>
+              <entry><b>Level 2</b></entry>
+              <entry><b>Level 3</b></entry>
+              <entry><b>Comment</b></entry>
+            </row>
+          </thead>
+          <tbody>
+            <row>
+              <entry><image href="images/font_0114.png" height="31" width="29" id="image_i53_3gm_gz"
+              /></entry>
+              <entry>&#x00C6;<term><text>hex: &amp;#x00C6;</text></term></entry>
+              <entry>&#x00C6;<term><text>hex: &amp;#x00C6;</text></term></entry>
+              <entry>&#x00C6;<term><text>hex: &amp;#x00C6;</text></term></entry>
+              <entry/>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0010.png" height="27" width="20"
+                id="image_j53_3gm_gz"/><image href="images/font_0035.png" height="25" width="20"
+                  id="image_k53_3gm_gz"/><image href="images/font_0064.png" height="33" width="28"
+                    id="image_l53_3gm_gz"/><image href="images/font_0083.png" height="29" width="27"
+                      id="image_m53_3gm_gz"/></entry>
+              <entry>&#x00E6;<term><text>hex: &amp;#x00E6;</text></term></entry>
+              <entry>&#x00E6;<term><text>hex: &amp;#x00E6;</text></term></entry>
+              <entry>&#x00E6;<term><text>hex: &amp;#x00E6;</text></term></entry>
+              <entry/>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0129.png" height="23" width="20"
+                id="image_n53_3gm_gz"/><image href="images/font_0019.png" height="26" width="24"
+                  id="image_o53_3gm_gz"/><image href="images/font_0099.png" height="27" width="24"
+                    id="image_p53_3gm_gz"/></entry>
+              <entry>ct</entry>
+              <entry>ct</entry>
+              <entry>&#xEEC5;<term><text>hex: &amp;#xEEC5;</text></term></entry>
+              <entry>see <xref
+                  href="https://folk.uib.no/hnooh/mufi/specs/MUFI-Alphabetic-4-0.pdf#page=81"
+                  format="pdf" scope="external">MUFI character recommendation (version 4.0; 22
+                  december 2015)</xref></entry>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0033.png" height="22" width="30"
+                id="image_q53_3gm_gz"/></entry>
+              <entry>&#x0152;<term><text>hex: &amp;#x0152;</text></term></entry>
+              <entry>&#x0152;<term><text>hex: &amp;#x0152;</text></term></entry>
+              <entry>&#x0152;<term><text>hex: &amp;#x0152;</text></term></entry>
+              <entry/>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0117.png" height="20" width="22"
+                id="image_r53_3gm_gz"/><image href="images/font_0121.png" height="27" width="24"
+                  id="image_s53_3gm_gz"/></entry>
+              <entry>&#x0153;<term><text>hex: &amp;#x0153;</text></term></entry>
+              <entry>&#x0153;<term><text>hex: &amp;#x0153;</text></term></entry>
+              <entry>&#x0153;<term><text>hex: &amp;#x0153;</text></term></entry>
+              <entry/>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0004.png" height="40" width="20"
+                id="image_u53_3gm_gz"/><image href="images/font_0008.png" height="43" width="20"
+                  id="image_v53_3gm_gz"/><image href="images/font_0088.png" height="39" width="29"
+                    id="image_w53_3gm_gz"/>
+              </entry>
+              <entry>ß</entry>
+              <entry>ß</entry>
+              <entry>ß</entry>
+              <entry/>
+            </row>
+            <row>
+              <entry><image href="images/font_0098.png" height="42" width="20" id="image_t53_3gm_gz"
+              /></entry>
+              <entry>&#x017F;z <term><text>hex: &amp;#x017F;z </text></term></entry>
+              <entry>&#x017F;z <term><text>hex: &amp;#x017F;z </text></term></entry>
+              <entry>&#x017F;z <term><text>hex: &amp;#x017F;z </text></term></entry>
+              <entry>This is not a ligature</entry>
+            </row>
+            <row>
+              <entry><image href="images/font_0135.png" height="41" width="29" id="image_x53_3gm_gz"
+              /></entry>
+              <entry>ss </entry>
+              <entry>&#x017F;s <term><text>hex: &amp;#x017F;s </text></term></entry>
+              <entry>&#x017F;s <term><text>hex: &amp;#x017F;s </text></term></entry>
+              <entry>This is not a ligature </entry>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0115.png" height="27" width="20"
+                id="image_y53_3gm_gz"/><image href="images/font_0065.png" height="31" width="20"
+                  id="image_z53_3gm_gz"/></entry>
+              <entry>sp</entry>
+              <entry>&#x017F;p<term><text>hex: &amp;#x017F;p</text></term></entry>
+              <entry>&#x017F;p<term><text>hex: &amp;#x017F;p</text></term></entry>
+              <entry/>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0093.png" height="29" width="20"
+                id="image_av3_3gm_gz"/><image href="images/font_0069.png" height="34" width="25"
+                  id="image_bv3_3gm_gz"/></entry>
+              <entry>st</entry>
+              <entry>&#xFB06;<term><text>hex: &amp;#xFB06;</text></term></entry>
+              <entry>&#xFB06;<term><text>hex: &amp;#xFB06;</text></term></entry>
+              <entry/>
+            </row>
+            <row>
+              <entry><image href="images/font_0076.png" height="36" width="19" id="image_dv3_3gm_gz"
+              /><image href="images/font_0085.png" height="35" width="22" id="image_cv3_3gm_gz"
+              /></entry>
+              <entry>&#x017F;t<term><text>hex: &amp;#x017F;t</text></term></entry>
+              <entry>&#x017F;t<term><text>hex: &amp;#x017F;t</text></term></entry>
+              <entry>&#xFB05;<term><text>hex: &amp;#xFB05;</text></term></entry>
+              <entry/>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0037.png" height="43" width="20"
+                id="image_ev3_3gm_gz"/><image href="images/font_0075.png" height="42" width="21"
+                  id="image_fv3_3gm_gz"/><image href="images/font_0086.png" height="43" width="23"
+                    id="image_gv3_3gm_gz"/></entry>
+              <entry>tz</entry>
+              <entry>tz</entry>
+              <entry>&#xEEDC;<term><text>hex: &amp;#xEEDC;</text></term></entry>
+              <entry>see <xref
+                  href="https://folk.uib.no/hnooh/mufi/specs/MUFI-Alphabetic-4-0.pdf#page=81"
+                  format="pdf" scope="external">MUFI character recommendation (version 4.0; 22
+                  december 2015)</xref></entry>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0080.png" height="24" width="29"
+                id="image_hv3_3gm_gz"/></entry>
+              <entry>jtzo</entry>
+              <entry>jtzo</entry>
+              <entry>j&#xEEDC;<term><text>hex: &amp;#xEEDC;</text></term>o</entry>
+              <entry>see <xref
+                  href="https://folk.uib.no/hnooh/mufi/specs/MUFI-Alphabetic-4-0.pdf#page=81"
+                  format="pdf" scope="external">MUFI character recommendation (version 4.0; 22
+                  december 2015)</xref></entry>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0028.png" height="24" width="35"
+                id="image_iv3_3gm_gz"/></entry>
+              <entry>etc.</entry>
+              <entry>&#xA75B;tc.<term><text>hex: &amp;#xA75B;tc.</text></term></entry>
+              <entry>&#xA75B;tc.<term><text>hex: &amp;#xA75B;tc.</text></term></entry>
+              <entry/>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0062.png" height="23" width="25"
+                id="image_jv3_3gm_gz"/><image href="images/font_0007.png" height="24" width="26"
+                  id="image_kv3_3gm_gz"/></entry>
+              <entry>&#xA75B;c.<term><text>hex: &amp;#xA75B;c.</text></term></entry>
+              <entry>&#xA75B;c.<term><text>hex: &amp;#xA75B;c.</text></term></entry>
+              <entry>&#xA75B;c.<term><text>hex: &amp;#xA75B;c.</text></term></entry>
+              <entry/>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0123.png" height="45" width="20"
+                id="image_qvr_5fm_gz"/></entry>
+              <entry>ij</entry>
+              <entry>&#x0133;<term><text>hex: &amp;#x0133;</text></term></entry>
+              <entry>&#x0133;<term><text>hex: &amp;#x0133;</text></term></entry>
+              <entry/>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0119.png" height="20" width="39"
+                id="image_lv3_3gm_gz"/></entry>
+              <entry>&#x0026;c<term><text>hex: &amp;#x0026;c</text></term></entry>
+              <entry>&#x0026;c<term><text>hex: &amp;#x0026;c</text></term></entry>
+              <entry>&#x0026;c<term><text>hex: &amp;#x0026;c</text></term></entry>
+              <entry/>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0047.png" height="23" width="35"
+                id="image_mv3_3gm_gz"/></entry>
+              <entry>&#x0026;&#x00E7;<term><text>hex: &amp;#x0026;&amp;#x00E7;</text></term></entry>
+              <entry>&#x0026;&#x00E7;<term><text>hex: &amp;#x0026;&amp;#x00E7;</text></term></entry>
+              <entry>&#x0026;&#x00E7;<term><text>hex: &amp;#x0026;&amp;#x00E7;</text></term></entry>
+              <entry/>
+            </row>
+            <row>
+              <entry dir="ltr"><image href="images/font_0100.png" height="25" width="22"
+                id="image_nv3_3gm_gz"/><image href="images/font_0072.png" height="24" width="22"
+                  id="image_ov3_3gm_gz"/><image href="images/font_0118.png" height="21" width="22"
+                    id="image_pv3_3gm_gz"/><image href="images/font_0051.png" height="29" width="28"
+                      id="image_qv3_3gm_gz"/><image href="images/font_0074.png" height="27" width="27"
+                        id="image_rv3_3gm_gz"/></entry>
+              <entry>&#x0026;<term><text>hex: &amp;#x0026;</text></term></entry>
+              <entry>&#x0026;<term><text>hex: &amp;#x0026;</text></term></entry>
+              <entry>&#x0026;<term><text>hex: &amp;#x0026;</text></term></entry>
+              <entry/>
+            </row>
+          </tbody>
+        </tgroup>
+      </table>
+      
+    </p>
+    </body>
 </topic>
