--- a/en/trans/tr_nasal_level_2.dita
+++ b/en/trans/tr_nasal_level_2.dita
@@ -17,11 +17,11 @@
 <tbody>
 <row>
 <entry><image href="images/frommen.jpg"/></entry>
-<entry><codeph>from&amp;#x0303;en</codeph></entry>
+<entry><codeph>from&#x0303;en</codeph></entry>
 </row>
                     <row>
                         <entry><image href="images/und_macht.jpg" id="image_cdk_dcb_pbb"/></entry>
-                        <entry><codeph>Un&amp;#x0303; macht</codeph></entry>
+                        <entry><codeph>Un&#x0303; macht</codeph></entry>
                     </row>
 </tbody>
 </tgroup>
