--- a/de/trans/lySchriftarten.dita
+++ b/de/trans/lySchriftarten.dita
@@ -8,7 +8,7 @@
                 <codeph>&lt;TextRegion></codeph>) mit dem PAGE XML Element <tt>&lt;TextStyle></tt>
             zu dokumentieren.</p>
         <example>
-            <codeblock>&lt;TextRegion type="heading" id="r_7_1"">
+            <codeblock outputclass="language-xml">&lt;TextRegion type="heading" id="r_7_1"">
             &lt;Coords points="542,306 569,306 569,342 542,342"/>
             &lt;TextLine id="tl_4" primaryLanguage="German">
                 &lt;Coords points="543,307 568,307 568,341 543,341"/>
@@ -59,7 +59,7 @@
                 </ul></p>
             
             <example>
-                <codeblock>&lt;Word>
+                <codeblock outputclass="language-xml">&lt;Word>
    &lt;TextStyle fontFamily="fraktur"/>
 &lt;/Word></codeblock>
             </example> <note importance="high"><p>Diese Angabe schränkt die Benennung von Schriftfamilien nicht ein. </p></note>
@@ -93,7 +93,7 @@
                     gesetzt wurde.</p>
             </note>
             <example>
-                <codeblock>        &lt;TextRegion type="paragraph" id="TextRegion_1476719787056_252">
+                <codeblock outputclass="language-xml">        &lt;TextRegion type="paragraph" id="TextRegion_1476719787056_252">
             &lt;Coords points="980,2090 1529,2090 1741,2098 1741,2149 1529,2156 980,2156"/>
             &lt;TextLine id="tl_83" primaryLanguage="German">
                 &lt;Coords points="981,2091 1528,2091 1528,2155 981,2155"/>
