--- a/de/trans/structur_gtpageformat.dita
+++ b/de/trans/structur_gtpageformat.dita
@@ -27,10 +27,10 @@
 <entry namest="c3" nameend="c5">PAGE-Format</entry>
 </row>
 <row>
-<entry>Page <codeblock>type="{Wert}"</codeblock></entry>
+  <entry>Page <codeph>type="{Wert}"</codeph></entry>
 <entry>spez. Region</entry>
-<entry>TextRegion <codeblock>type="{Wert}"</codeblock></entry>
-<entry>TextRegion <codeblock>custom="ocr-d-structure {type:Wert;}"</codeblock></entry>
+  <entry>TextRegion <codeph>type="{Wert}"</codeph></entry>
+  <entry>TextRegion <codeph>custom="ocr-d-structure {type:Wert;}"</codeph></entry>
 </row>
 </thead>
 <tbody>
