--- a/de/trans/trLabeling.dita
+++ b/de/trans/trLabeling.dita
@@ -8,10 +8,12 @@
             Oxygen-Editor erstellt. Die Dokumentation ist in Englisch abgefasst.</p>
     </body>
     <related-links>
+        <link href="https://github.com/OCR-D/gt-labelling" format="html" scope="external">
+            <desc>gt-labelling : semantic-labelling OCR ground truth data</desc></link>
         <link href="https://www.primaresearch.org/www/assets/papers/DAS2018_Clausner_SemanticLabelling.pdf" format="pdf" scope="external">
             <desc>Christian Clausner; Apostolos Antonacopoulos: Ontology and Framework for Semantic Labelling of Document Data and 
                 Software Methods </desc></link>
-        <link href="https://github.com/PRImA-Research-Lab/semantic-labelling" format="html" scope="external"><desc>semantic-labelling auf GitHub</desc>
+        <link href="https://github.com/PRImA-Research-Lab/semantic-labelling" format="html" scope="external"><desc>Semantic-labelling auf GitHub, Referenzanwendung</desc>
         </link>
     </related-links>
 </topic>
