--- a/de/trans/trFremdsprache.dita
+++ b/de/trans/trFremdsprache.dita
@@ -14,7 +14,7 @@
                 <colspec colname="c3" colnum="3" colwidth="1*"/>
                 <colspec colname="c4" colnum="4" colwidth="1*"/>
                 <colspec colname="c5" colnum="5" colwidth="1*"/>
-                <tbody>
+                <thead>
                     <row>
                         <entry dir="ltr"><b>Vorlage</b></entry>
                         <entry><b><xref href="level_1_4.dita" format="dita">Level
@@ -25,6 +25,9 @@
                             3</xref></b></entry>
                         <entry><b>Kommentar</b></entry>
                     </row>
+                </thead>
+                <tbody>
+                    
                     <row>
                         <entry><image href="images/font_0058.png" height="26" width="39"
                                 id="image_y5r_5fm_gz"/></entry>
@@ -57,7 +60,7 @@
                                 <text>hex: &amp;#x0303;</text></term></entry>
                         <entry>&#x00E3;<term>a mit Tilde <text>dezimal: &amp;#227;</text>
                                 <text>hex: &amp;#x00E3;</text></term></entry>
-                        <entry>
+                        <entry outputclass="description">
                             <p>Im Level 1 wurde anhand des Kontext ermittelt, dass der Strich über
                                 dem Vokal eine Verkürzung einer Doppelung des Vokals darstellt. Bei
                                 einem anderen Kontext kann die Schreibweise aus Level 2 angewendet
@@ -67,7 +70,8 @@
                                 ausgelassene Zeichen, Nasalstrich [Kürzungsstrich] ist in vielen
                                 Fällen nicht möglich. Aus diesem Grund wird empfohlen eine mögliche
                                 Form (Tilde, Makron) zu wählen und diese Entscheidung in den
-                                Metadaten zum Ground Truth zu dokumentieren.</p></entry>
+                                Metadaten zum Ground Truth zu dokumentieren.</p>
+                        </entry>
                     </row>
                     <row>
                         <entry dir="ltr"><image href="images/font_0104.png" height="34" width="41"
@@ -126,13 +130,12 @@
                         <entry>e&#x0304;<term>e mit kombiniertem Makron <text>dezimal:
                                     e&amp;#772;</text>
                                 <text>hex: e&amp;#x0304;</text></term></entry>
-                        <entry>
-                            &#x0113;<term>e mit einem Makron <text>dezimal:
-                                        &amp;#275;</text>
-                                    <text>hex: &amp;#x0113;</text></term>
+                        <entry> &#x0113;<term>e mit einem Makron <text>dezimal: &amp;#275;</text>
+                                <text>hex: &amp;#x0113;</text></term>
                         </entry>
-                        <entry>siehe Kommentar: <xref href="#topic_t5h_w2m_gz/Tilde_Makron"
-                                format="dita">Tilde, Makron</xref></entry>
+                        <entry outputclass="description">siehe Kommentar: <xref
+                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></entry>
                     </row>
                     <row>
                         <entry><image href="images/font_0018.png" height="44" width="23"
@@ -147,8 +150,9 @@
                         <entry>e&#x0303;<term>e mit kombinierter Tilde <text>dezimal:
                                     e&amp;#771;</text>
                                 <text>hex: e&amp;#x0303;</text></term></entry>
-                        <entry>siehe Kommentar: <xref href="#topic_t5h_w2m_gz/Tilde_Makron"
-                            format="dita">Tilde, Makron</xref></entry>
+                        <entry outputclass="description">siehe Kommentar: <xref
+                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></entry>
                     </row>
                     <row>
                         <entry dir="ltr"><image href="images/font_0101.png" height="32" width="24"
@@ -165,9 +169,9 @@
                         <entry>m&#x0303;<term>m mit kombinierter Tilde <text>dezimal:
                                     m&amp;#771;</text>
                                 <text>hex: m&amp;#x0303;</text></term></entry>
-                        <entry>siehe Kommentar: <xref href="#topic_t5h_w2m_gz/Tilde_Makron"
-                            format="dita">Tilde, Makron</xref></entry>
-                        
+                        <entry outputclass="description">siehe Kommentar: <xref
+                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></entry>
                     </row>
                     <row>
                         <entry dir="ltr"><image href="images/font_0067.png" height="27" width="39"
@@ -200,8 +204,9 @@
                         <entry>&#x00F1;<term>n mit kombinierter Tilde <text>dezimal:
                                     n&amp;#241;</text>
                                 <text>hex: n&amp;#x00F1;</text></term></entry>
-                        <entry>siehe Kommentar: <xref href="#topic_t5h_w2m_gz/Tilde_Makron"
-                            format="dita">Tilde, Makron</xref></entry>
+                        <entry outputclass="description">siehe Kommentar: <xref
+                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></entry>
                     </row>
                     <row>
                         <entry dir="ltr"><image href="images/font_0053.png" height="47" width="31"
@@ -216,11 +221,11 @@
                         <entry>o&#x0303;<term>o mit kombinierter Tilde <text>dezimal:
                                     o&amp;#771;</text>
                                 <text>hex: o&amp;#x0303;</text></term></entry>
-                        <entry>&#x00F5;<term>o mit Tilde <text>dezimal:
-                                    &amp;#245;</text>
+                        <entry>&#x00F5;<term>o mit Tilde <text>dezimal: &amp;#245;</text>
                                 <text>hex: &amp;#x00F5;</text></term></entry>
-                        <entry>siehe Kommentar: <xref href="#topic_t5h_w2m_gz/Tilde_Makron"
-                            format="dita">Tilde, Makron</xref></entry>
+                        <entry outputclass="description">siehe Kommentar: <xref
+                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></entry>
                     </row>
                     <row>
                         <entry dir="ltr"><image href="images/font_0041.png" height="48" width="29"
@@ -240,8 +245,9 @@
                                     p&amp;#771;</text>
                                 <text>hex: &amp;#x0303;</text></term>
                         </entry>
-                        <entry>siehe Kommentar: <xref href="#topic_t5h_w2m_gz/Tilde_Makron"
-                            format="dita">Tilde, Makron</xref></entry>
+                        <entry outputclass="description">siehe Kommentar: <xref
+                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></entry>
                     </row>
                     <row>
                         <entry dir="ltr"><image href="images/font_0043.png" height="54" width="26"
@@ -329,7 +335,7 @@
                         <entry>&#xE8BF;<term>q mit abschließendem et versehen <text>dezimal:
                                     &amp;#59583;</text>
                                 <text>hex: &amp;#xE8BF;</text></term></entry>
-                        <entry>zu &amp;#xE8BF; siehe <xref
+                        <entry outputclass="description">zu &amp;#xE8BF; siehe <xref
                                 href="https://folk.uib.no/hnooh/mufi/specs/MUFI-Alphabetic-4-0.pdf#page=81"
                                 format="pdf" scope="external">MUFI character recommendation (Version
                                 4.0; 22 Dezember 2015)</xref></entry>
@@ -603,8 +609,9 @@
                                 <text>hex: u&amp;#x0303;</text></term></entry>
                         <entry>&#x0169;<term>u mit Tilde <text>dezimal: &amp;#361;</text>
                                 <text>hex: &amp;#x0169;</text></term></entry>
-                        <entry>siehe Kommentar: <xref href="#topic_t5h_w2m_gz/Tilde_Makron"
-                                format="dita">Tilde, Makron</xref></entry>
+                        <entry outputclass="description">siehe Kommentar: <xref
+                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></entry>
                     </row>
                     <row>
                         <entry dir="ltr"><image href="images/font_0059.png" height="46" width="23"
@@ -753,7 +760,7 @@
                         <entry>&#x010F;<term>verwendet d mit Hatschek
                                     <text>dezimal:&amp;#271;</text>
                                 <text>hex: &amp;#x010F;</text></term></entry>
-                        <entry>
+                        <entry outputclass="description">
                             <p dir="ltr">Abkürzung für <i>der</i></p>
                             <p dir="ltr">Beispiele: <xref
                                     href="http://www.deutschestextarchiv.de/book/view/faulhaber_instrument_1610?p=0031"
@@ -771,13 +778,13 @@
                         <entry>and&#x010F;n oder <i>andern</i><term>verwendet d mit Hatschek
                                     <text>dezimal:an&amp;#271;n</text>
                                 <text>hex: an&amp;#x010F;n</text></term></entry>
-                        <entry>and&#x010F;n<term>verwendet d mit Hatschek
-                                    <text>dezimal: an&amp;#271;n</text>
+                        <entry>and&#x010F;n<term>verwendet d mit Hatschek <text>dezimal:
+                                    an&amp;#271;n</text>
                                 <text>hex: an&amp;#x010F;n</text></term></entry>
-                        <entry>and&#x010F;n<term>verwendet d mit Hatschek
-                                    <text>dezimal: an&amp;#271;n</text>
+                        <entry>and&#x010F;n<term>verwendet d mit Hatschek <text>dezimal:
+                                    an&amp;#271;n</text>
                                 <text>hex: an&#x010F;n</text></term></entry>
-                        <entry>Abkürzung für Zeichenkette <i>der</i> auch in einem Wort
+                        <entry outputclass="description">Abkürzung für Zeichenkette <i>der</i> auch in einem Wort
                             möglich</entry>
                     </row>
                     <row>
@@ -814,7 +821,7 @@
                                         <text>dezimal:&amp;#964;</text>
                                     <text>hex:&amp;#x03C4;</text></term>
                         </entry>
-                        <entry>
+                        <entry outputclass="description">
                             <p dir="ltr"> befindet sich in der Wortmitte </p>
                             <p dir="ltr"><image href="images/trFremdsprache_beispiel.png"
                                     id="image_syy_3hm_hz" scale="40"/>
@@ -838,7 +845,7 @@
                         <entry>&#x03DA;<term>griechischer Großbuchstabe stigma
                                     <text>dezimal:&amp;#986;</text>
                                 <text>hex:&amp;#x03DA;</text></term></entry>
-                        <entry>
+                        <entry outputclass="description">
                             <p dir="ltr"><image href="images/font_0132.png" height="36" width="167"
                                     id="image_uyr_5fm_gz"/></p>
                             <p dir="ltr"><xref
@@ -860,7 +867,7 @@
                         <entry>&#x03BF;&#x03C2;<term>Ligatur aus byzantinischer Zeit
                                 (aufgelöst) <text>dezimal: &amp;#959;&amp;#962;</text>
                                 <text>hex: &amp;#x03BF;&amp;#x03C2;</text></term></entry>
-                        <entry>
+                        <entry outputclass="description">
                             <p dir="ltr">Ligatur aus byzantinischer Zeit</p>
                             <p>kann zur Zeit nur aufgelöst werden.</p>
                             <p dir="ltr">Beispiel: <image href="images/font_0078.png" height="36"
