problem linktext, comment out element desc

--- a/en/trans/trLabeling.dita
+++ b/en/trans/trLabeling.dita
@@ -19,8 +19,8 @@
             href="https://www.primaresearch.org/www/assets/papers/DAS2018_Clausner_SemanticLabelling.pdf"
             format="pdf" scope="external"><linktext>Christian Clausner; Apostolos Antonacopoulos: Ontology and Framework for Semantic
                 Labelling of Document Data and Software Methods</linktext>
-            <desc>Christian Clausner; Apostolos Antonacopoulos: Ontology and Framework for Semantic
-                Labelling of Document Data and Software Methods </desc>
+            <!--<desc>Christian Clausner; Apostolos Antonacopoulos: Ontology and Framework for Semantic
+                Labelling of Document Data and Software Methods </desc>-->
         </link>
         <link href="https://github.com/PRImA-Research-Lab/semantic-labelling" format="html"
             scope="external"><linktext>Semantic-labelling on GitHub, reference implementation</linktext>
