--- a/de/trans/impressum.dita
+++ b/de/trans/impressum.dita
@@ -11,7 +11,7 @@ rechtliche Hinweise zur Internetpräsenz des Projekts OCR-D.</p></section>
 <section>
  <title>Herausgeber</title>
   
-      <p><image href="../resources/ocrd.png" scale="50" id="image_dlz_b1h_dqb"/>Die
+      <p><image href="../resources/logo_beta.png" scale="50" id="image_dlz_b1h_dqb"/>Die
         Transkriptionsrichtlinien zur Erstellung von Transkriptionen für Ground Truth basieren u. a.
         auf der Dokumentation des DTA-Basisformates. Die Richtlinien werden im Rahmen des Projekts
           <xref href="http://www.ocr-d.de" format="html" scope="external">OCR-D</xref> erarbeitet
