--- a/en/trans/impressum.dita
+++ b/en/trans/impressum.dita
@@ -10,7 +10,7 @@
         legal information on the internet presence of the OCR-D project.</p></section>
 <section>
  <title>Provider</title>
-      <p>The transcription guidelines for creating transcriptions for Ground Truth are based, among
+      <p><image href="../resources/logo_beta.png" scale="50" id="image_dlz_b1h_dqb"/>The transcription guidelines for creating transcriptions for Ground Truth are based, among
         other things, on the documentation of the DTA basic format. The guidelines are developed and
         published as part of the <xref href="http://www.ocr-d.de" format="html" scope="external"
           >OCR-D</xref> project.</p>
